--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,16 @@
 {
 	"github": {
 		"silent": true
-	}
+	},
+	"headers": [
+		{
+			"source": "/api/bundle",
+			"headers": [
+				{
+					"key": "Cache-Control",
+					"value": "public, max-age=400000"
+				}
+			]
+		}
+	]
 }
