--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
 	"private": true,
+	"type": "module",
 	"scripts": {
 		"deploy": "now --public && now alias",
 		"postpublish": "npm run deploy",
@@ -11,17 +12,20 @@
 		]
 	},
 	"dependencies": {
-		"camelcase": "^6.2.0",
-		"execa": "^5.0.0",
-		"mem": "^8.0.0",
-		"rollup": "^2.41.2",
+		"camelcase": "^8.0.0",
+		"execa": "^9.2.0",
+		"memoize": "^10.0.0",
+		"rollup": "^4.18.0",
 		"rollup-plugin-cleanup": "^3.2.1",
-		"rollup-plugin-commonjs": "^10.0.1",
-		"rollup-plugin-node-resolve": "^5.1.0",
+		"@rollup/plugin-commonjs": "^26.0.1",
+		"@rollup/plugin-node-resolve": "^15.2.3",
 		"tempdir": "^2.0.0"
 	},
 	"devDependencies": {
-		"@vercel/node": "^1.9.1",
-		"xo": "^0.38.2"
+		"@vercel/node": "^3.1.7",
+		"xo": "^0.58.0"
+	},
+	"engines": {
+		"node": ">=20"
 	}
 }
