--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
 		"xo": "^0.58.0"
 	},
 	"optionalDependencies": {
-		"@rollup/rollup-linux-x64-gnu": "4.9.5"
+		"@rollup/rollup-linux-x64-gnu": "^4.18.0"
 	},
 	"engines": {
 		"node": ">=20"
