--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
 		"@vercel/node": "^3.1.7",
 		"xo": "^0.58.0"
 	},
+	"optionalDependencies": {
+		"@rollup/rollup-linux-x64-gnu": "^4.18.0"
+	},
 	"engines": {
 		"node": ">=20"
 	}
